# partake

./: .clang-format  .clang-format-include  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.txt  meson.build
common/: asio.cpp  asio.hpp  errors.cpp  errors.hpp  logging.cpp  logging.hpp  meson.build  message.cpp  message.hpp  overloaded.hpp  partake_proquint.c  partake_proquint.h  posix.cpp  posix.hpp  proquint.cpp  proquint.hpp  random.cpp  random.hpp  test_main.cpp  test_proquint.c  testing.cpp  testing.hpp  token.cpp  token.hpp  win32.cpp  win32.hpp
daemon/: allocator.cpp  allocator.hpp  asio.hpp  cli.cpp  cli.hpp  client.cpp  client.hpp  config.cpp  config.hpp  connection_acceptor.cpp  connection_acceptor.hpp  daemon.cpp  daemon.hpp  handle.cpp  handle.hpp  handle_list.cpp  handle_list.hpp  hive.cpp  hive.hpp  key_sequence.cpp  key_sequence.hpp  main.c  main.cpp  meson.build  message.cpp  object.cpp  object.hpp  overloaded.cpp  overloaded.hpp  page_size.cpp  page_size.hpp  partaked_allocator.c  partaked_allocator.h  partaked_channel.c  partaked_channel.h  partaked_config.c  partaked_config.h  partaked_connection.c  partaked_connection.h  partaked_daemon.c  (+74 more)
partaked/: main.c  meson.build  partake_allocator.c  partake_allocator.h  partake_channel.c  partake_channel.h  partake_connection.c  partake_connection.h  partake_daemon.c  partake_daemon.h  partake_handle.c  partake_handle.h  partake_iobuf.c  partake_iobuf.h  partake_logging.h  partake_malloc.c  partake_malloc.h  partake_object.h  partake_pool.c  partake_pool.h  partake_request.c  partake_request.h  partake_response.c  partake_response.h  partake_segment.c  partake_segment.h  partake_sender.c  partake_sender.h  partake_shmem.c  partake_shmem.h  partake_shmem_mmap.c  partake_shmem_shmget.c  partake_shmem_win32.c  partake_task.c  partake_task.h  partake_tchar.h  partake_token.c  partake_token.h  partake_voucherqueue.c  partake_voucherqueue.h  (+1 more)
protocol/: meson.build  partake.fbs  partake_protocol.fbs
subprojects/: .clang-format  .gitignore  README.md  cli11.wrap.license  doctest.wrap.license  dropt.wrap  flatbuffers.wrap.license  flatcc.wrap  fmt.wrap.license  libuv.wrap.license  microsoft-gsl.wrap  plf_colony.wrap  spdlog.wrap.license  ssstr.wrap  tl-expected.wrap.license  trompeloeil.wrap.license  uthash.wrap.license  zf_log.wrap
subprojects/dlmalloc/: .editorconfig  meson.build
subprojects/dlmalloc/dlmalloc/: malloc.c.license  malloc.h.license
subprojects/packagefiles/dropt/: meson.build
subprojects/packagefiles/flatcc/: meson.build
subprojects/packagefiles/plf_colony/: meson.build
subprojects/packagefiles/zf_log/: meson.build
