# This file is part of the partake project
# Copyright 2020-2023 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: BSD-2-Clause

project(
    'plf_colony',
    'cpp',
)

includes = include_directories('.')

install_headers(
    [
        'plf_colony.h',
    ],
)

plf_colony_dep = declare_dependency(
    include_directories: includes,
)
